linked javascriptfile & created variables

--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
         <h1> 90's Alternative </br>
             Rock N' Roll </h1>
            <section class="display-section">
+                <h2>Guesses Remaining:</h2>
+
+                <h2>Wins:</h2>
+
+                <h2>Losses:</h2>
 
            </section>
+
            <section class="game-section">
-               <p>Press any key to get started!</p>
-               <p>Wins</p>
+               <h2>Press any key to get started!</h2>
                
+               <h2> Current Word</h2>
+                <span id="placeholders">_____ ___ __!</span>
+
 
         </section>
 
-
+    <link rel="js" type="text/js" href="assets/javascript/game.js">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>   
