--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                <h2>Press any key to get started!</h2>
                
                <h2> Current Word</h2>
+
                 <span id="placeholders">_____ ___ __!</span>
+                
+                <h2> Letters already guessed</h2>
 
 
         </section>
