--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
 </head>
 
     <body class="background">
-        <h1> 90's Alternative </br>
+        <h1 class="theme"> 90's Alternative </br>
             Rock N' Roll </h1>
+
+        <h1 class="start-win-loss"><span id="start-win-loss"> Pick Letter to Get Started!</span></h1>
+
            <section class="display-section">
-                <h2>Guesses Remaining:</h2>
+                <h2>Guesses Remaining: <span id="guesses-left">8</span> </h2>
 
-                <h2>Wins:</h2>
-
-                <h2>Losses:</h2>
-
+                <h2>Wins: <span id="wins">0</span> </h2>
+ 
+                <h2>Losses: <span id="losses">0</span> </h2>
+                <span id="image-sound-byte"></span>
            </section>
 
            <section class="game-section">
-               <h2>Press any key to get started!</h2>
                
                <h2> Current Word</h2>
 
                 <span id="placeholders">_____ ___ __!</span>
-                
-                <h2> Letters already guessed</h2>
+
+                <h2> Letters already guessed:<span id="guessed-letters"></span></h2>
 
 
         </section>
-
-    <link rel="js" type="text/js" href="assets/javascript/game.js">
+    <script src="./assets/javascript/game.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>   
