--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2>Wins: <span id="wins">0</span> </h2>
  
                 <h2>Losses: <span id="losses">0</span> </h2>
-                <span id="image-sound-byte"></span>
+                <span id="image"></span>
            </section>
 
            <section class="game-section">
@@ -35,6 +35,8 @@
 
 
         </section>
+
+        <span id="spotify"></span>
     <script src="./assets/javascript/game.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
